--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -13,11 +13,13 @@
 	font-family: Arial, Helvetica, sans-serif;
 	display: block;
 	overflow: auto;
+	-webkit-overflow-scrolling: auto;
 	left: 0;
 	top: 60;
 	z-index: 2;
 	width: var(--sidebar-width);
 	height: 100%;
+	-webkit-tap-highlight-color: hsla(200, 60%, 100%, 0.05);
 }
 
 .sidebar-static,
